# docassemble-LAProvisionalCustodyByMandate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/LAProvisionalCustodyByMandate/data/questions/: la_provisional_custody_by_mandate.yml
docassemble/LAProvisionalCustodyByMandate/data/templates/: la_provisional_custody_by_mandate.docx  la_provisional_custody_by_mandate_next_steps.docx
