[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.LAProvisionalCustodyByMandate"
version = "0.0.1"
description = "Louisiana Provisional Custody By Mandate"
readme = "README.md"
authors = [
    { name = "", email = "plocket@example.com" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
